# pico-work

./: .gitmodules  CMakeLists.txt  README.md
pj_adc/: AdcBuffer.cpp  AdcBuffer.h  CMakeLists.txt  LcdIli9341SPI.cpp  LcdIli9341SPI.h  Main.cpp
pj_adc_fft/: AdcBuffer.cpp  AdcBuffer.h  CMakeLists.txt  Main.cpp  README.md  RingBuffer.h  fft.cpp  wiring.txt
pj_base/: CMakeLists.txt
pj_paint/: CMakeLists.txt  LcdIli9341SPI.cpp  Main.cpp
pj_tflmicro_mnist/: CMakeLists.txt  Main.cpp
pj_tflmicro_sin/: CMakeLists.txt  Main.cpp
pj_tflmicro_speech/: CMakeLists.txt  README.md  adc_buffer.cpp  audio_provider.cpp  audio_provider.h  feature_provider.cpp  feature_provider.h  main.cpp  ring_block_buffer.h  test_buffer.cpp  test_buffer.h  utility_macro.h
pj_tflmicro_speech/script/: wave_array.py
pj_voice_assistant_wake_word/: CMakeLists.txt  LcdIli9341SPI.cpp  README.md  adc_buffer.cpp  adc_buffer.h  audio_buffer.h  audio_provider.h  feature_provider.cpp  logo_data.h  main.cpp  majority_vote.h  oled_seps525_spi.cpp  oled_seps525_spi.h  ring_block_buffer.h  test_audio_data.h  utility_macro.h  wiring.txt
pj_voice_assistant_wake_word/01_script/: array2wave.py  float_model.tflite  model.tflite  record_1sec.py  train_micro_speech_model_voice_assistant_wake_word.ipynb  wave2array.py
pj_voice_assistant_wake_word/01_script/image2array/: CMakeLists.txt  Main.cpp
pj_voice_assistant_wake_word/micro_features/: micro_model_settings.cpp  micro_model_settings.h  model.cpp
